# annowork-cli

./: .readthedocs.yaml  .travis.yml  Makefile  PR_2026-01-21_list_assigned_hours.md  README.md  README_for_developer.md  pylintrc  pyproject.toml  pytest.ini  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json  entrypoint.sh
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: codeql-analysis.yml  lint-test.yml  publish-to-pypi.yml
annoworkcli/: __main__.py
annoworkcli/account/: list_external_linkage_info.py  put_external_linkage_info.py  subcommand.py
annoworkcli/actual_working_time/: delete_actual_working_time.py  list_actual_working_hours_daily.py  list_actual_working_hours_daily_by_job.py  list_actual_working_hours_daily_groupby_tag.py  list_actual_working_hours_daily_total.py  list_actual_working_time.py  list_actual_working_time_weekly.py  subcommand.py
annoworkcli/annofab/: list_assigned_hours.py  list_job_with_annofab_project.py  list_working_hours.py  put_account_external_linkage_info.py  put_job_from_annofab_project.py  reshape_working_hours.py  subcommand.py  utils.py  visualize_statistics.py
annoworkcli/common/: cli.py  organization_tag.py  utils.py  workspace_tag.py
annoworkcli/expected_working_time/: delete_expected_working_time.py  list_expected_working_time.py  list_expected_working_time_daily_total.py  list_expected_working_time_groupby_tag.py  list_expected_working_time_weekly.py  subcommand.py
annoworkcli/job/: change_job_properties.py  delete_job.py  (+2 more)
docs/: conf.py  requirements.txt
tests/: test____main__.py
(+138 files in other folders)
