[tool.poetry]
name = "annoworkcli"
version = "1.3.11"
description = ""
authors = ["yuji38kwmt"]

[[tool.poetry.source]]
name = "kci"
url = 'https://kurusugawa.jp/nexus3/repository/KRS-pypi/simple'


[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "*"
annoworkapi = ">=1.4.0"
annofabapi = ">=0.52.4"
more-itertools = "*"
pandas = "*"
isodate = "*"
annofabcli = ">=1.51.5"

[tool.poetry.scripts]
annoworkcli = "annoworkcli.__main__:main"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-xdist = "*"
pytest-cov = "*"

isort = "*"
mypy = "*"
pylint = "*"
autoflake = "*"
flake8 = "*"
black = {version = "^21.12b0", allow-prereleases = true}

# type stub package
types-requests = "*"
types-python-dateutil = "*"
types-PyYAML = "*"

ipython = "*"

# Document library
sphinx = "^4.3"
pydata-sphinx-theme = "*"
sphinx-last-updated-by-git = "*"
sphinx-argparse = "*"

[tool.black]
line-length = 120


[tool.isort]
profile = "black"
line_length = 120


[tool.mypy]
ignore_missing_imports = true

check_untyped_defs = true



[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
